# omarchy-cybex

./: .gitignore  README.md  install  install.sh
config/alacritty/: alacritty.toml
config/bash/: blerc  completion.inputrc
config/bash/archive/: README.md  blerc  completion.inputrc
config/fish/: config.fish
config/ghostty/: config
config/hyprland/: bindings.conf  input.conf  looknfeel.conf
config/keyd/: macos_shortcuts.conf
config/starship/: starship.toml
config/waybar/: config.jsonc  style.css
config/waybar/indicators/: idle-toggle.sh
config/waycorner/: config.toml
plymouth/themes/cybex/: cybex.plymouth  cybex.script
rust-tui/: Cargo.toml
rust-tui/src/: app.rs  config.rs  installer.rs  main.rs  options.rs  state.rs  theme.rs
rust-tui/src/ui/: footer.rs  header.rs  layout.rs  mod.rs  option_list.rs  output_panel.rs  popup.rs  status_bar.rs
screensaver/: screensaver.txt
scripts/: auto-tile
tui/: __init__.py  main.py
tui/data/: __init__.py  options.py
tui/screens/: __init__.py  install_modal.py  main_screen.py
tui/styles/: omarchy.tcss
tui/utils/: __init__.py  installer.py  state.py
tui/widgets/: __init__.py  header_banner.py  option_list.py
